# arxiv-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  RUN_GUIDE.md  pyproject.toml
dags/: daily_arxiv_sync.py
docker/: docker-compose.yml
docker/postgres/: init.sql
prompts/: system_prompt_v1.txt
scripts/: backfill_opensearch.py  check_db.py  init_db.py  run_chunking.py  run_ingestion.py  run_ragas_eval.py  test_search.py  verify_connections.py
src/api/: main.py
src/api/routes/: ask.py  health.py  ingest.py
src/config/: settings.py
src/generation/: answer_generator.py  llm_client.py  prompt_templates.py
src/ingestion/: arxiv_client.py  pdf_parser.py
src/models/: api_models.py  paper.py
src/observability/: evaluation.py  langfuse_client.py
src/processing/: chunker.py  embeddings.py
src/retrieval/: context_builder.py  hybrid_search.py  reranker.py  retrieval_pipeline.py
src/storage/: opensearch_client.py  postgres_client.py
src/ui/: gradio_app.py
tests/: conftest.py
tests/e2e/: __init__.pyuv
