[project]
name = "arxiv-rag"
version = "0.1.0"
description = "ArXiv Paper Curator — Production-grade local-first RAG system for academic research papers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "asyncpg>=0.31.0",
    "docling>=2.73.0",
    "easyocr>=1.7.2",
    "fastapi>=0.129.0",
    "gradio>=6.5.1",
    "httpx>=0.28.1",
    "langfuse>=3.14.1",
    "llama-index>=0.14.14",
    "llama-index-embeddings-ollama>=0.8.6",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-vector-stores-opensearch>=1.0.0",
    "numpy>=2.4.2",
    "opensearch-py>=3.1.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ragas>=0.4.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "ipykernel>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require Docker services)",
    "e2e: End-to-end tests",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
